# UOUMiner-Source

./: Makefile.am  README.txt  algos.h  api.cpp  bench.cpp  miner.h  nvapi.cpp  nvml.cpp  pools.cpp  uouminer.conf  uouminer.cpp  uouminer.sln  uouminer.vcxproj  uouminer.vcxproj.filters  util.cpp
compat/: uouminer-config.h
pipe/: cuda_blake512.cu  cuda_combine.cu  cuda_groestl512.cu  cuda_hefty1.cu  cuda_keccak512.cu  cuda_sha256.cu  pipe.cu  pipe.h
res/: uouminer.rc
